[package]
name = "rocksdb_client"
version = "0.1.0"
edition = "2021"

[dependencies]
ext-php-rs = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version ="0.7", features = ["codec"] }
bytes = "1.6"
futures = "0.3.30"

[lib]
crate-type = ["cdylib"]