[package]
name = "rocksdb-client-rust"
version = "0.1.2"
edition = "2021"
description = "A Rust client for interacting with RocksDB server"
license = "MIT"

exclude = [
    "/node_modules",
    "generator.js",
    "package.json",
    "package-lock.json",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version ="0.7", features = ["codec"] }
bytes = "1.6"
futures = "0.3.30"