[package]
name = "rocksdb-client-rust"
version = "0.1.4"
edition = "2021"
description = "A Rust client for interacting with RocksDB server"
license = "MIT"

exclude = [
    "/node_modules",
    "/templates",
    "generator.js",
    "package.json",
    "package-lock.json",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.6"
futures = "0.3.30"
async-std = "1.12.0"
futures_codec = "0.4.1"