[package]
name = "rocksdb_server"
version = "0.1.4"
edition = "2021"

[dependencies]
rust-rocksdb = { version = "^0.26", features = ["multi-threaded-cf"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
json-patch = "2.0"
log = "0.4.21"
structopt = "0.3"
env_logger = "0.11.3"

[target.'cfg(not(target_os = "windows"))'.dependencies]
file-lock = "2.1"

[dev-dependencies]
tokio-test = "0.4"
