[package]
name = "rocksdb_server"
version = "0.3.5"
edition = "2021"

[dependencies]
rust-rocksdb = { version = "0.27", features = ["multi-threaded-cf"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
json-patch = "2.0"
log = "0.4.22"
structopt = "0.3"
env_logger = "0.11.3"
futures = "0.3.30"
async-std = { version ="1.12.0", features = ["attributes", "std"] }
ctrlc = "3.1.9"
num_cpus = "1.16.0"
prometheus = "0.13.4"
once_cell = "1.19.0"
sysinfo = "0.30"
async-trait = "0.1.80"

[dev-dependencies]
tokio-test = "0.4"
